# stars-pipeline

./: .coverage  .gitignore  Dockerfile  MANIFEST.in  MESH_calculations_example.sql  README.md  conftest.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-16-output-schema-redesign.md  2026-04-20-run-selection-modes.md  2026-04-30-mesh-accuracy-bands.md  2026-04-30-training-module.md  2026-04-30-viz-module.md
docs/superpowers/specs/: 2026-04-16-output-schema-redesign.md  2026-04-20-run-selection-modes-design.md
sagemaker/: job_definition.py
scripts/: agreement_report.py  generate_metrics_doc.py
stars_pipeline/: cli.py  config.py  db.py  logging_config.py
stars_pipeline/sql/: actuals.sql  cv.sql
stars_pipeline/stars/: mesh.py  monitor.py  output.py  tests.py  warnings.py
stars_pipeline/viz/: __init__.py  _wide.py  cli.py  plots.py
tests/: test_cli.py  test_config.py  test_db.py  test_logging_config.py
tests/stars/: test_mesh.py  test_monitor.py  test_output.py  test_tests.py  test_warnings.py
tests/viz/: conftest.py  test_cli.py  test_plots.py  test_wide.py
