[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stars-pipeline"
version = "0.1.0"
description = "STARS diagnostic framework pipeline for segment-level volume prediction evaluation"
requires-python = ">=3.11"
dependencies = [
    "snowflake-connector-python>=3.6.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "boto3>=1.28.0",
]

[project.scripts]
stars-pipeline = "stars_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["stars_pipeline*", "sagemaker*"]

[tool.setuptools.package-data]
"stars_pipeline" = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["stars_pipeline", ".venv", "build", "dist", ".git"]
addopts = "--import-mode=importlib"
